tests/paczka1/fuzzy1/10645222.err
Error in line 3: AysorOm0vmE S486 78,5
Error in line 15: XgVOESFW0s S916 59,0
Error in line 12: 0zg S980 291,7
Error in line 18: e5ssxVNuZ S743 23,3
